Touch disambiguation blacklist is not being queried properly https://bugs.webkit.org/show_bug.cgi?id=108222

Patch by Dan Alcantara <dfalcantara@chromium.org> on 2013-02-01
Reviewed by Adam Barth.

TEST=WebFrameTest::DisambiguationPopupBlacklist

Source/WebCore:

Fix the blacklist so that we check it for the right nodes.
Add a chromium test to check that the blacklist is being built and used
correctly.  Also update the other DisambiguationPopup tests to
use the new page scale method.

* page/TouchDisambiguation.cpp:
(WebCore::findGoodTouchTargets):

Source/WebKit/chromium:

Fix the blacklist so that we check it for the right nodes.
Add a test to check that the blacklist is being built and used
correctly.  Also update the other DisambiguationPopup tests to
use the new page scale method.

* tests/WebFrameTest.cpp:
* tests/data/disambiguation_popup_blacklist.html: Added.

Canonical link: https://commits.webkit.org/126819@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141554 268f45cc-cd09-0410-ab3c-d52691b4dbfc